# Trading-System

./: haskell-template.cabal  hie.yaml
Test/: ArticleExtractionSpec.hs  SentimentAnalysisSpec.hs  Spec.hs  WebScraperSpec.hs
Test/Scraper/: GamesIndustry.hs  Gamesutra.hs  ParsersSpec.hs
Test/ScraperSpec/: GamesIndustry.hs  Gamesutra.hs  Polygon.hs  RPS.hs
expected_test_results/: despelote.json  mario.expected.json  mario.expected.txt  meta.expected.json  meta.expected.txt  monster.json  monster.txt  pokemon.txt  sonic.expected.json
expected_test_results/indexes/: polygon_index_articles.json
src/: ArticleHandler.hs  Common.hs  Main.hs  Scraper.Parsers.hs  Scraper.hs
src/ArticleExtraction/: Article.hs  ArticleExtraction.hs  IO.hs  Preprocessing.hs
src/Database/: Database.hs
src/FundamentalAnalysis/: FundamentalAnalysis.Types.hs  FundamentalAnayalsisScript.hs
src/Polling/: Polling.hs
src/Scraper/: EuroGamer.hs  GameSpot.hs  GamesIndustry.hs  GamesSutra.hs  Ign.hs  Kotaku.hs  PCGamer.hs  Parsers.hs  Polygon.hs  RPS.hs  Requests.hs  Scraper.hs  VentureBeat.hs
src/SentimentAnalysis/: Classifier.hs  PythonScript.hs  Sentiment.hs  Utils.hs
src/TrendAnalysis/: PythonScript.hs
src/articleExtract/: Preprocessing.hs
src/articleExtraction/: ArticleExtraction.hs
src/scaraper/: Scraper.Parsers.hs  Scraper.Requests.hs
src/scraper/: Parsers.hs
test/: ArticleExtractionSpec.hs  WebScraperSpec.hs
test_data/: PCGamer.html  despelote.html  gamesutra_example.html  mario.html  meta.html  monster.html  pokemon.html  sonic.html
test_data/index pages/: VentureBeats_index.html  polygon_index.html  rps_index.html
