cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude        >=1.0
    , shower
    , time
    , with-utf8
    , http-conduit
    , html-conduit
    , tagsoup
    , text           >=1.2.5.0
    , retry 
    , tokenize
    , http-client
    , process
    , http-client-tls
    , xml-lens
    , lens
    , xml-conduit
    , http-types
    , bytestring

  hs-source-dirs:     src
  default-language:   Haskell2010

test-suite test
  import:         shared
  main-is:        Spec.hs
  ghc-options:    -main-is Spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: Test
  build-depends:
    , hspec
    , hspec-discover

executable haskell-template
  import:  shared
  main-is: Main.hs
